# mddtoolkit

./: .gitignore  CreateSynthData.py  GR27_feldspar_in.csv  N13ksp_good_example.csv  README.md  calc_arrhenius.py  calculate_experimental_results.py  conHe_Param.py  create_test_dataset.py  dataset.py  diffusion_objective.py  diffusion_problem.py  emcee_main.py  exampleB.csv  example_a_all_steps.csv  fig1_lines.py  forwardModelKinetics.py  fwdmodelkinetics_for_test.py  generate_bounds.py  generate_inputs.py  get_plot_name.py  input_GR27_feldspar_in.csv  interface.py  main.py  make_schematic_fig.py  openOptimizationResults.py  optimization_routines.py  optimizer_performance_test.py  organize_x.py  plot_prescribed_kinetics.py  plot_results.py  publish.sh  pyproject.toml  pyswarms_test.py  requirements.txt  save_results.py  schedule.csv  schedule_no_extra_steps.csv  schematic_fig.py  setup.py  (+7 more)
.tmp.driveupload/: 454891  454899  520813
data/: 03-RDY-011-QZH.csv  04-MG-080-BR-He3.csv  04-RDY-129-STR-He3.csv  3DomSynthDataNoisyM3_plane_sheet.csv  98-PCM-105-MNZ.csv  EG121ERR_DCa.csv  EG121ERR_DCe.csv  HU-08-03-He3.csv  KLR5-a-Da-1086um.csv  KM95-15-Dc-1308um.csv  KM95-15-De-897um.csv  KM95-15-Df.csv  KM95-20-Db-1288um.csv  KM95-24-a-Da-1130um.csv  KM95-6-Da-1107um.csv  KM95-6-Db-1100um.csv  LABCO-Plag-Db.csv  LABCO-Plag-Db.txt  LABCO-Px-Dc_removedBlanks.csv  PM1-A.csv  PM4-A.csv  UB09-4.csv  UPC-1.csv  input_03-RDY-011-QZH.csv  input_3DomSynthDataNoisyM3_plane_sheet.csv  input_8DomSynthDataNoisyM3_plane_sheet.csv  input_8DomSynthData_noisy_plane_sheet_combined_last_step.csv  (+36 more)
(+180 files in other folders)
