[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mddtoolkit"
version = "0.3.0"
description = "A package for modelling multi-domain diffusion (MDD) processes."
readme = "README.md"
requires-python = ">= 3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.24",
    "torch",
    "scipy",
    "pandas",
    "matplotlib",
    "pyyaml",
    "tabulate",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
mddtoolkit = "diffusion_kinetics.cli:main"
